--- a/index.html
+++ b/index.html
@@ -1,2 +1,75 @@
-<h1>Assistant Arabik</h1>
-<p>Ce fichier s'affiche bien.</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8" />
+<title>Assistant Arabik</title>
+<style>
+  body, html { margin:0; padding:0; height:100%; }
+  .chat-container { position: fixed; bottom:80px; right:20px;
+    width:350px; max-height:500px; background:#0a0f2c;
+    border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.3);
+    display:flex; flex-direction:column; overflow:hidden; font-family:sans-serif; }
+  .messages { flex:1; padding:10px; overflow-y:auto; }
+  .message.user { align-self:flex-end; background:#f6e27f; color:#0a0f2c;
+    margin:5px;border-radius:10px 10px 0 10px;padding:8px; max-width:80%; }
+  .message.bot { align-self:flex-start; background:rgba(255,255,255,0.1);
+    color:#f6e27f; margin:5px;border-radius:10px 10px 10px 0;padding:8px; max-width:80%; }
+  .input-area { display:flex; border-top:1px solid #444; }
+  .input-area input { flex:1;padding:8px;border:none;
+    border-radius:0 0 0 10px;background:#1f294a;color:#f6e27f; }
+  .input-area button { background:#f6e27f;color:#0a0f2c;
+    border:none;padding:0 15px; }
+</style>
+</head>
+<body>
+  <div class="chat-container" id="chatBox">
+    <div class="messages" id="messages"></div>
+    <div class="input-area">
+      <input id="promptInput" placeholder="Pose ta question..." />
+      <button onclick="handleSend()">Envoyer</button>
+    </div>
+  </div>
+
+  <script>
+    const token = "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"; // remplace ici
+    const apiUrl = "https://api-inference.huggingface.co/models/gpt2";
+
+    async function handleSend() {
+      const inp = document.getElementById("promptInput");
+      const prompt = inp.value.trim();
+      if (!prompt) return;
+      addMessage(prompt, "user");
+      inp.value = "";
+      addMessage("⏳", "bot");
+      try {
+        const res = await fetch(apiUrl, {
+          method: "POST",
+          headers: {
+            Authorization: `Bearer ${token}`,
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ inputs: prompt, options: { wait_for_model: true } })
+        });
+        const json = await res.json();
+        const botResp = json[0]?.generated_text || "Je n’ai rien."
+        replaceLastBot(botResp);
+      } catch (e) {
+        replaceLastBot("Erreur serveur.");
+      }
+    }
+
+    function addMessage(text, cls) {
+      const m = document.getElementById("messages");
+      const div = document.createElement("div");
+      div.className = `message ${cls}`;
+      div.textContent = text;
+      m.appendChild(div);
+      m.scrollTop = m.scrollHeight;
+    }
+    function replaceLastBot(text) {
+      const bots = document.querySelectorAll(".message.bot");
+      bots[bots.length-1].textContent = text;
+    }
+  </script>
+</body>
+</html>
