--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <script>
     const token = "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"; // remplace ici
-    const apiUrl = "https://api-inference.huggingface.co/models/gpt2";
+    const apiUrl = "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.1";
 
     async function handleSend() {
       const inp = document.getElementById("promptInput");
