--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<title>Assistant Arabik</title>
-<style>
-  body, html { margin:0; padding:0; height:100%; }
-  .chat-container { position: fixed; bottom:80px; right:20px;
-    width:350px; max-height:500px; background:#0a0f2c;
-    border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.3);
-    display:flex; flex-direction:column; overflow:hidden; font-family:sans-serif; }
-  .messages { flex:1; padding:10px; overflow-y:auto; }
-  .message.user { align-self:flex-end; background:#f6e27f; color:#0a0f2c;
-    margin:5px;border-radius:10px 10px 0 10px;padding:8px; max-width:80%; }
-  .message.bot { align-self:flex-start; background:rgba(255,255,255,0.1);
-    color:#f6e27f; margin:5px;border-radius:10px 10px 10px 0;padding:8px; max-width:80%; }
-  .input-area { display:flex; border-top:1px solid #444; }
-  .input-area input { flex:1;padding:8px;border:none;
-    border-radius:0 0 0 10px;background:#1f294a;color:#f6e27f; }
-  .input-area button { background:#f6e27f;color:#0a0f2c;
-    border:none;padding:0 15px; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Assistant Arabik</title>
+  <style>
+    body, html { margin:0; padding:0; height:100%; background:#0a0f2c; font-family:sans-serif; color:#f6e27f; }
+    .chat-container { position: fixed; bottom:80px; right:20px; width:350px; max-height:500px;
+      background:#0a0f2c; border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.3);
+      display:flex; flex-direction:column; overflow:hidden; }
+    .messages { flex:1; padding:10px; overflow-y:auto; }
+    .message.user { align-self:flex-end; background:#f6e27f; color:#0a0f2c;
+      margin:5px;border-radius:10px 10px 0 10px;padding:8px; max-width:80%; }
+    .message.bot { align-self:flex-start; background:rgba(255,255,255,0.1);
+      color:#f6e27f; margin:5px;border-radius:10px 10px 10px 0;padding:8px; max-width:80%; }
+    .input-area { display:flex; border-top:1px solid #444; }
+    .input-area input { flex:1;padding:8px;border:none; background:#1f294a; color:#f6e27f; }
+    .input-area button { background:#f6e27f;color:#0a0f2c;border:none;padding:0 15px; cursor:pointer; }
+  </style>
 </head>
 <body>
-  <div class="chat-container" id="chatBox">
+  <div class="chat-container">
     <div class="messages" id="messages"></div>
     <div class="input-area">
       <input id="promptInput" placeholder="Pose ta question..." />
@@ -31,16 +28,32 @@
   </div>
 
   <script>
-    const token = "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"; // remplace ici
+    const token = "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"; // remplace ici avec ton vrai token
     const apiUrl = "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.1";
 
+    function addMessage(text, type) {
+      const div = document.createElement("div");
+      div.className = `message ${type}`;
+      div.textContent = text;
+      document.getElementById("messages").appendChild(div);
+      document.getElementById("messages").scrollTop = document.getElementById("messages").scrollHeight;
+    }
+
+    function replaceLastBot(text) {
+      const messages = document.querySelectorAll(".message.bot");
+      if (messages.length > 0) {
+        messages[messages.length - 1].textContent = text;
+      }
+    }
+
     async function handleSend() {
-      const inp = document.getElementById("promptInput");
-      const prompt = inp.value.trim();
+      const input = document.getElementById("promptInput");
+      const prompt = input.value.trim();
       if (!prompt) return;
       addMessage(prompt, "user");
-      inp.value = "";
+      input.value = "";
       addMessage("⏳", "bot");
+
       try {
         const res = await fetch(apiUrl, {
           method: "POST",
@@ -48,27 +61,27 @@
             Authorization: `Bearer ${token}`,
             "Content-Type": "application/json"
           },
-          body: JSON.stringify({ inputs: prompt, options: { wait_for_model: true } })
+          body: JSON.stringify({ inputs: prompt })
         });
-        const json = await res.json();
-        const botResp = json[0]?.generated_text || "Je n’ai rien."
-        replaceLastBot(botResp);
-      } catch (e) {
-        replaceLastBot("Erreur serveur.");
-      }
-    }
 
-    function addMessage(text, cls) {
-      const m = document.getElementById("messages");
-      const div = document.createElement("div");
-      div.className = `message ${cls}`;
-      div.textContent = text;
-      m.appendChild(div);
-      m.scrollTop = m.scrollHeight;
-    }
-    function replaceLastBot(text) {
-      const bots = document.querySelectorAll(".message.bot");
-      bots[bots.length-1].textContent = text;
+        const json = await res.json();
+
+        // Analyse complète de la réponse
+        if (Array.isArray(json) && json[0]?.generated_text) {
+          replaceLastBot(json[0].generated_text);
+        } else if (json?.generated_text) {
+          replaceLastBot(json.generated_text);
+        } else if (json?.output) {
+          replaceLastBot(json.output);
+        } else if (typeof json === "string") {
+          replaceLastBot(json);
+        } else {
+          replaceLastBot("📦 Réponse brute : " + JSON.stringify(json));
+        }
+
+      } catch (err) {
+        replaceLastBot("❌ Erreur lors de l’appel à l’IA.");
+      }
     }
   </script>
 </body>
