--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <script>
     const token = "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"; // remplace ici avec ton vrai token
-    const apiUrl = "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct-v0.1";
+    const apiUrl = "https://render-7yay.onrender.com/chat";
 
     function addMessage(text, type) {
       const div = document.createElement("div");
