--- a/index.html
+++ b/index.html
@@ -3,23 +3,140 @@
 <head>
   <meta charset="UTF-8" />
   <title>Assistant Arabik</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <style>
-    body, html { margin:0; padding:0; height:100%; background:#0a0f2c; font-family:sans-serif; color:#f6e27f; }
-    .chat-container { position: fixed; bottom:80px; right:20px; width:350px; max-height:500px;
-      background:#0a0f2c; border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.3);
-      display:flex; flex-direction:column; overflow:hidden; }
-    .messages { flex:1; padding:10px; overflow-y:auto; }
-    .message.user { align-self:flex-end; background:#f6e27f; color:#0a0f2c;
-      margin:5px;border-radius:10px 10px 0 10px;padding:8px; max-width:80%; }
-    .message.bot { align-self:flex-start; background:rgba(255,255,255,0.1);
-      color:#f6e27f; margin:5px;border-radius:10px 10px 10px 0;padding:8px; max-width:80%; }
-    .input-area { display:flex; border-top:1px solid #444; }
-    .input-area input { flex:1;padding:8px;border:none; background:#1f294a; color:#f6e27f; }
-    .input-area button { background:#f6e27f;color:#0a0f2c;border:none;padding:0 15px; cursor:pointer; }
+    body, html {
+      margin:0; padding:0; height:100%;
+      background:#0a0f2c;
+      font-family: 'Poppins', sans-serif;
+      color:#f6e27f;
+    }
+
+    #openChatBtn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background-color: #f6e27f;
+      color: #0a0f2c;
+      font-size: 26px;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    #notificationDot {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      width: 12px;
+      height: 12px;
+      background: red;
+      border-radius: 50%;
+      display: block;
+    }
+
+    .chat-container {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      width: 360px;
+      max-height: 550px;
+      background: #0a0f2c;
+      border-radius: 16px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      display: none;
+      flex-direction: column;
+      overflow: hidden;
+      border: 1px solid #f6e27f;
+    }
+
+    .chat-header {
+      background: #f6e27f;
+      color: #0a0f2c;
+      padding: 10px;
+      font-weight: bold;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .chat-header button {
+      background: transparent;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+      color: #0a0f2c;
+    }
+
+    .messages {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+    }
+
+    .message.user {
+      align-self: flex-end;
+      background: #f6e27f;
+      color: #0a0f2c;
+      margin: 5px;
+      border-radius: 20px 20px 0 20px;
+      padding: 10px 14px;
+      max-width: 80%;
+      font-size: 14px;
+    }
+
+    .message.bot {
+      align-self: flex-start;
+      background: rgba(255,255,255,0.1);
+      color: #f6e27f;
+      margin: 5px;
+      border-radius: 20px 20px 20px 0;
+      padding: 10px 14px;
+      max-width: 80%;
+      font-size: 14px;
+    }
+
+    .input-area {
+      display: flex;
+      border-top: 1px solid #444;
+    }
+
+    .input-area input {
+      flex: 1;
+      padding: 10px;
+      border: none;
+      background: #1f294a;
+      color: #f6e27f;
+      font-size: 14px;
+    }
+
+    .input-area button {
+      background: #f6e27f;
+      color: #0a0f2c;
+      border: none;
+      padding: 0 20px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div class="chat-container">
+
+  <!-- Bouton flottant -->
+  <button id="openChatBtn">
+    💬
+    <span id="notificationDot"></span>
+  </button>
+
+  <!-- Fenêtre de chat -->
+  <div class="chat-container" id="chatContainer">
+    <div class="chat-header">
+      Assistant Arabik
+      <button onclick="closeChat()">×</button>
+    </div>
     <div class="messages" id="messages"></div>
     <div class="input-area">
       <input id="promptInput" placeholder="Pose ta question..." />
@@ -28,48 +145,66 @@
   </div>
 
   <script>
-  const apiUrl = "https://render-7yay.onrender.com/chat";
+    const apiUrl = "https://render-7yay.onrender.com/chat";
 
-  function addMessage(text, type) {
-    const div = document.createElement("div");
-    div.className = `message ${type}`;
-    div.textContent = text;
-    document.getElementById("messages").appendChild(div);
-    document.getElementById("messages").scrollTop = document.getElementById("messages").scrollHeight;
-  }
-
-  function replaceLastBot(text) {
-    const messages = document.querySelectorAll(".message.bot");
-    if (messages.length > 0) {
-      messages[messages.length - 1].textContent = text;
+    function addMessage(text, type) {
+      const div = document.createElement("div");
+      div.className = `message ${type}`;
+      div.textContent = text;
+      document.getElementById("messages").appendChild(div);
+      document.getElementById("messages").scrollTop = document.getElementById("messages").scrollHeight;
     }
-  }
 
-  async function handleSend() {
-    const input = document.getElementById("promptInput");
-    const prompt = input.value.trim();
-    if (!prompt) return;
-    addMessage(prompt, "user");
-    input.value = "";
-    addMessage("⏳", "bot");
-
-    try {
-      const res = await fetch(apiUrl, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ prompt })
-      });
-
-      const json = await res.json();
-      const botResp = json.response || "Aucune réponse IA.";
-      replaceLastBot(botResp);
-
-    } catch (err) {
-      replaceLastBot("❌ Erreur lors de l’appel à l’IA.");
+    function replaceLastBot(text) {
+      const messages = document.querySelectorAll(".message.bot");
+      if (messages.length > 0) {
+        messages[messages.length - 1].textContent = text;
+      }
     }
-  }
-</script>
+
+    async function handleSend() {
+      const input = document.getElementById("promptInput");
+      const prompt = input.value.trim();
+      if (!prompt) return;
+      addMessage(prompt, "user");
+      input.value = "";
+      addMessage("⏳", "bot");
+
+      try {
+        const res = await fetch(apiUrl, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ prompt })
+        });
+
+        const json = await res.json();
+        const botResp = json.response || "❌ Aucune réponse générée.";
+        replaceLastBot(botResp);
+
+      } catch (err) {
+        replaceLastBot("❌ Erreur lors de l’appel à l’IA.");
+      }
+    }
+
+    // ouverture du chat
+    document.getElementById("openChatBtn").addEventListener("click", () => {
+      document.getElementById("chatContainer").style.display = "flex";
+      document.getElementById("notificationDot").style.display = "none";
+    });
+
+    // fermeture
+    function closeChat() {
+      document.getElementById("chatContainer").style.display = "none";
+    }
+
+    // message de bienvenue automatique
+    window.onload = () => {
+      setTimeout(() => {
+        addMessage("👋 Bienvenue sur Arabik ! Pose-moi une question sur la civilisation arabe ✨", "bot");
+      }, 800);
+    };
+  </script>
 </body>
 </html>
